# Bottery

./: .breakpoints  .gitignore  .replit  Oscillate Launch.lnk  bot help sheet.txt  dad_jokes.txt  givelist.txt  goog-cred.json  main.py  pyproject.toml  reactionimages.txt
musica/: 9Hz8gyPDylg.f397.mp4.part  Y82jDHRrswc.f251.webm.part
