[tool.poetry]
name = "repl_python3_beta_Bottery"
version = "0.1.0"
description = ""
authors = ["maximuswrath <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.18.0"
Flask = "^2.0.1"
PyNaCl = "^1.4.0"
pygsheets = "^2.0.5"
pandas = "^1.3.1"
gTTS = "^2.2.3"
youtube_dl = "^2021.6.6"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
